--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Vinuk Atukorala</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
     <script src="https://kit.fontawesome.com/47602a98ca.js" crossorigin="anonymous"></script>
 </head>
 <body>
