--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script src="https://kit.fontawesome.com/47602a98ca.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="header">
+    <div class="fixed-header "id="header">
+        
         <div class="container">
             <nav>
                 <img src="images/logo.png" class="logo">
